@@ -28,6 +28,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.locks.ReentrantLock;
 
+import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.c.function.CEntryPoint;
 import org.graalvm.nativeimage.c.function.CEntryPoint.Publish;
 import org.graalvm.nativeimage.c.function.CEntryPointLiteral;
@@ -35,6 +36,7 @@ import org.graalvm.nativeimage.c.type.CIntPointer;
 import org.graalvm.word.WordFactory;
 
 import com.oracle.svm.core.SubstrateOptions;
+import com.oracle.svm.core.SubstrateSegfaultHandler;
 import com.oracle.svm.core.Uninterruptible;
 import com.oracle.svm.core.annotate.Alias;
 import com.oracle.svm.core.annotate.Substitute;
@@ -48,7 +50,6 @@ import com.oracle.svm.core.graal.stackvalue.UnsafeStackValue;
 import com.oracle.svm.core.headers.LibC;
 import com.oracle.svm.core.jdk.RuntimeSupport;
 import com.oracle.svm.core.log.Log;
-import com.oracle.svm.core.os.IsDefined;
 import com.oracle.svm.core.posix.headers.CSunMiscSignal;
 import com.oracle.svm.core.posix.headers.Errno;
 import com.oracle.svm.core.posix.headers.Signal;
@@ -66,8 +67,8 @@ final class Target_jdk_internal_misc_Signal {
 
     @Substitute
     private static long handle0(int sig, long nativeH) {
-        if (!SubstrateOptions.EnableSignalAPI.getValue()) {
-            throw new IllegalArgumentException("Installing signal handlers is not enabled");
+        if (!SubstrateOptions.EnableSignalHandling.getValue()) {
+            throw new IllegalArgumentException("Signal handlers can't be installed if signal handling is disabled, see option '" + SubstrateOptions.EnableSignalHandling.getName() + "'.");
         }
         return Util_jdk_internal_misc_Signal.handle0(sig, nativeH);
     }
@@ -79,14 +80,14 @@ final class Target_jdk_internal_misc_Signal {
     }
 
     /**
-     * Called by the VM to execute Java signal handlers. Except that in sun.misc.Signal, this method
-     * is private.
+     * Called by the VM to execute Java signal handlers. Except that in jdk.internal.misc.Signal,
+     * this method is private.
      */
     @Alias
     static native void dispatch(int number);
 }
 
-/** Support for Target_sun_misc_Signal. */
+/** Support for Target_jdk_internal_misc_Signal. */
 final class Util_jdk_internal_misc_Signal {
 
     /** A thread to dispatch signals as they are raised. */
@@ -104,30 +105,56 @@ final class Util_jdk_internal_misc_Signal {
         /* All-static class. */
     }
 
-    /** Constants for the longs from sun.misc.Signal. */
+    /** Constants for the longs from jdk.internal.misc.Signal. */
     private static final long sunMiscSignalDefaultHandler = 0;
     private static final long sunMiscSignalIgnoreHandler = 1;
     private static final long sunMiscSignalDispatchHandler = 2;
     private static final long sunMiscSignalErrorHandler = -1;
 
     /**
-     * Register a Java signal handler with the the C signal handling mechanism.
+     * Returns whether the currently installed signal handler matched the passed dispatcher.
      *
-     * This implementation does not complain (by returning -1) about registering signal handlers for
-     * signals that the VM itself uses.
+     * Note this method can race with signal installation unless proper locking is used.
+     */
+    static boolean isCurrentDispatcher(int sig, SignalDispatcher dispatcher) {
+        Signal.sigaction handler = UnsafeStackValue.get(Signal.sigaction.class);
+        Signal.sigaction(sig, WordFactory.nullPointer(), handler);
+        return handler.sa_handler() == dispatcher;
+    }
+
+    /**
+     * Register a Java signal handler with the C signal handling mechanism.
+     *
+     * This code is only called from the substitute Target_jdk_internal_misc_Signal#handle0, which
+     * is called from within a static synchronized call to ensure race-free execution.
      */
     static long handle0(int sig, long nativeH) {
-        if (!SubstrateOptions.EnableSignalHandling.getValue()) {
-            return sunMiscSignalIgnoreHandler;
-        }
         ensureInitialized();
         final Signal.SignalDispatcher newDispatcher = nativeHToDispatcher(nativeH);
         /* If the dispatcher is the CSunMiscSignal handler, then check if the signal is in range. */
         if ((newDispatcher == CSunMiscSignal.countingHandlerFunctionPointer()) && (CSunMiscSignal.signalRangeCheck(sig) != 1)) {
             return sunMiscSignalErrorHandler;
         }
+
+        /*
+         * If the segfault handler is registered, then the user cannot override this handler within
+         * Java code.
+         */
+        if (SubstrateSegfaultHandler.isInstalled() && (sig == Signal.SignalEnum.SIGSEGV.getCValue() || sig == Signal.SignalEnum.SIGBUS.getCValue())) {
+            return sunMiscSignalErrorHandler;
+        }
+
+        /*
+         * If the following signals are ignored, then a handler should not be registered for them.
+         */
+        if (sig == Signal.SignalEnum.SIGHUP.getCValue() || sig == Signal.SignalEnum.SIGINT.getCValue() || sig == Signal.SignalEnum.SIGTERM.getCValue()) {
+            if (isCurrentDispatcher(sig, Signal.SIG_IGN())) {
+                return sunMiscSignalIgnoreHandler;
+            }
+        }
+
         updateDispatcher(sig, newDispatcher);
-        final Signal.SignalDispatcher oldDispatcher = PosixUtils.installSignalHandler(sig, newDispatcher);
+        final Signal.SignalDispatcher oldDispatcher = PosixUtils.installSignalHandler(sig, newDispatcher, Signal.SA_RESTART());
         CIntPointer sigset = UnsafeStackValue.get(CIntPointer.class);
         sigset.write(1 << (sig - 1));
         Signal.sigprocmask(Signal.SIG_UNBLOCK(), (Signal.sigset_tPointer) sigset, WordFactory.nullPointer());
@@ -155,9 +182,9 @@ final class Util_jdk_internal_misc_Signal {
                             throw new IllegalArgumentException("C signal handling mechanism is in use.");
                         }
                         /* Report other failure. */
-                        Log.log().string("Util_sun_misc_Signal.ensureInitialized: CSunMiscSignal.create() failed.")
+                        Log.log().string("Util_jdk_internal_misc_Signal.ensureInitialized: CSunMiscSignal.create() failed.")
                                         .string("  errno: ").signed(openErrno).string("  ").string(Errno.strerror(openErrno)).newline();
-                        throw VMError.shouldNotReachHere("Util_sun_misc_Signal.ensureInitialized: CSunMiscSignal.open() failed.");
+                        throw VMError.shouldNotReachHere("Util_jdk_internal_misc_Signal.ensureInitialized: CSunMiscSignal.open() failed.");
                     }
 
                     /* Initialize the table of signal states. */
@@ -189,12 +216,11 @@ final class Util_jdk_internal_misc_Signal {
         for (Signal.SignalEnum value : Signal.SignalEnum.values()) {
             signalStateList.add(new SignalState(value.name(), value.getCValue()));
         }
-        if (IsDefined.isLinux()) {
+        if (Platform.includedIn(Platform.LINUX.class)) {
             for (Signal.LinuxSignalEnum value : Signal.LinuxSignalEnum.values()) {
                 signalStateList.add(new SignalState(value.name(), value.getCValue()));
             }
-        }
-        if (IsDefined.isDarwin()) {
+        } else if (Platform.includedIn(Platform.DARWIN.class)) {
             for (Signal.DarwinSignalEnum value : Signal.DarwinSignalEnum.values()) {
                 signalStateList.add(new SignalState(value.name(), value.getCValue()));
             }
@@ -214,7 +240,7 @@ final class Util_jdk_internal_misc_Signal {
                 return entry.getNumber();
             }
         }
-        /* {@link sun.misc.Signal#findSignal(String)} expects a -1 on failure. */
+        /* {@link jdk.internal.misc.Signal#findSignal(String)} expects a -1 on failure. */
         return -1;
     }
 
@@ -351,12 +377,12 @@ final class Util_jdk_internal_misc_Signal {
 
         protected static void await() {
             final int awaitResult = CSunMiscSignal.await();
-            PosixUtils.checkStatusIs0(awaitResult, "Util_sun_misc_Signal.SignalState.await(): CSunMiscSignal.await() failed.");
+            PosixUtils.checkStatusIs0(awaitResult, "Util_jdk_internal_misc_Signal.SignalState.await(): CSunMiscSignal.await() failed.");
         }
 
         protected static void wakeUp() {
             final int awaitResult = CSunMiscSignal.post();
-            PosixUtils.checkStatusIs0(awaitResult, "Util_sun_misc_Signal.SignalState.post(): CSunMiscSignal.post() failed.");
+            PosixUtils.checkStatusIs0(awaitResult, "Util_jdk_internal_misc_Signal.SignalState.post(): CSunMiscSignal.post() failed.");
         }
 
         /*
@@ -371,15 +397,15 @@ final class Util_jdk_internal_misc_Signal {
 }
 
 @AutomaticallyRegisteredFeature
-class IgnoreSIGPIPEFeature implements InternalFeature {
+class IgnoreSignalsFeature implements InternalFeature {
 
     @Override
     public void beforeAnalysis(BeforeAnalysisAccess access) {
-        RuntimeSupport.getRuntimeSupport().addStartupHook(new IgnoreSIGPIPEStartupHook());
+        RuntimeSupport.getRuntimeSupport().addStartupHook(new IgnoreSignalsStartupHook());
     }
 }
 
-final class IgnoreSIGPIPEStartupHook implements RuntimeSupport.Hook {
+final class IgnoreSignalsStartupHook implements RuntimeSupport.Hook {
 
     @CEntryPoint(publishAs = Publish.NotPublished)
     @CEntryPointOptions(prologue = NoPrologue.class, epilogue = NoEpilogue.class)
@@ -388,20 +414,24 @@ final class IgnoreSIGPIPEStartupHook implements RuntimeSupport.Hook {
     }
 
     private static final CEntryPointLiteral<Signal.SignalDispatcher> NOOP_SIGNAL_HANDLER = //
-                    CEntryPointLiteral.create(IgnoreSIGPIPEStartupHook.class, "noopSignalHandler", int.class);
+                    CEntryPointLiteral.create(IgnoreSignalsStartupHook.class, "noopSignalHandler", int.class);
 
     /**
+     * HotSpot ignores the SIGPIPE and SIGXFSZ signals (see <a
+     * href=https://github.com/openjdk/jdk/blob/fc76687c2fac39fcbf706c419bfa170b8efa5747/src/hotspot/os/posix/signals_posix.cpp#L608>signals_posix.cpp</a>).
+     * When signal handling is enabled we do the same thing.
+     * <p>
      * Ignore SIGPIPE. Reading from a closed pipe, instead of delivering a process-wide signal whose
      * default action is to terminate the process, will instead return an error code from the
      * specific write operation.
-     *
+     * <p>
      * From pipe(7): If all file descriptors referring to the read end of a pipe have been closed,
      * then a write(2) will cause a SIGPIPE signal to be generated for the calling process. If the
      * calling process is ignoring this signal, then write(2) fails with the error EPIPE.
-     *
+     * <p>
      * Note that the handler must be an empty function and not SIG_IGN. The problem is SIG_IGN is
      * inherited to subprocess but we only want to affect the current process.
-     *
+     * <p>
      * From signal(7): A child created via fork(2) inherits a copy of its parent's signal
      * dispositions. During an execve(2), the dispositions of handled signals are reset to the
      * default; the dispositions of ignored signals are left unchanged.
@@ -409,8 +439,23 @@ final class IgnoreSIGPIPEStartupHook implements RuntimeSupport.Hook {
     @Override
     public void execute(boolean isFirstIsolate) {
         if (isFirstIsolate && SubstrateOptions.EnableSignalHandling.getValue()) {
-            final SignalDispatcher signalResult = PosixUtils.installSignalHandler(Signal.SignalEnum.SIGPIPE.getCValue(), NOOP_SIGNAL_HANDLER.getFunctionPointer());
-            VMError.guarantee(signalResult != Signal.SIG_ERR(), "IgnoreSIGPIPEFeature.run: Could not ignore SIGPIPE");
+            synchronized (Target_jdk_internal_misc_Signal.class) {
+                installNoopHandler(Signal.SignalEnum.SIGPIPE);
+                installNoopHandler(Signal.SignalEnum.SIGXFSZ);
+            }
+        }
+    }
+
+    private static void installNoopHandler(Signal.SignalEnum signal) {
+        int signum = signal.getCValue();
+        if (Util_jdk_internal_misc_Signal.isCurrentDispatcher(signum, Signal.SIG_DFL())) {
+            /*
+             * Replace with no-op signal handler if a custom one has not already been installed.
+             */
+            final SignalDispatcher signalResult = PosixUtils.installSignalHandler(signum, NOOP_SIGNAL_HANDLER.getFunctionPointer(), Signal.SA_RESTART());
+            if (signalResult == Signal.SIG_ERR()) {
+                throw VMError.shouldNotReachHere(String.format("IgnoreSignalsStartupHook: Could not install signal: %s", signal));
+            }
         }
     }
 }
